hphp/hack/test/typecheck/parse_error_loc_else.php.exp
File "parse_error_loc_else.php", line 22, characters 14-23:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "parse_error_loc_else.php", line 22, characters 14-23:
You cannot use this syntax on the left-hand side of an assignment. (Parsing[1002])
File "parse_error_loc_else.php", line 14, characters 28-44:
Unbound name: `sps_DBResultField` (an object type) (Naming[2049])
File "parse_error_loc_else.php", line 19, characters 28-44:
Unbound name: `sps_DBResultField` (an object type) (Naming[2049])
File "parse_error_loc_else.php", line 13, characters 7-8:
Variable `$v` is undefined, or not always defined. (Naming[2050])
File "parse_error_loc_else.php", line 14, characters 5-14:
Variable `$outputRow` is undefined, or not always defined. (Naming[2050])
  File "parse_error_loc_else.php", line 13, characters 7-8:
  Did you mean `$v` instead?
File "parse_error_loc_else.php", line 14, characters 16-19:
Variable `$key` is undefined, or not always defined. (Naming[2050])
  File "parse_error_loc_else.php", line 13, characters 7-8:
  Did you mean `$v` instead?
File "parse_error_loc_else.php", line 19, characters 5-14:
Variable `$outputRow` is undefined, or not always defined. (Naming[2050])
  File "parse_error_loc_else.php", line 18, characters 14-15:
  Did you mean `$v` instead?
File "parse_error_loc_else.php", line 19, characters 16-19:
Variable `$key` is undefined, or not always defined. (Naming[2050])
  File "parse_error_loc_else.php", line 18, characters 14-15:
  Did you mean `$v` instead?
